--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 The India Coffee House chain was started by the Coffee Cess Committee, the first outlet – then named 'India Coffee House' – opened in Churchgate, Bombay in 1936, and was operated by the Indian Coffee Board. In the course of the 1940s there were nearly 50 Coffee Houses all over British India.
 </p>
 <hr>
-<img src="C:\Users\IMR Pc 03\Desktop\Website3\pic1.jfif "></img>
+<img src="https://github.com/Namrata82004/Miniwebsite/blob/main/pic3.jpg?raw=true "></img>
+<img src="https://github.com/Namrata82004/Miniwebsite/blob/main/pic4.jpg?raw=true "></img>
 
 <h1><font color="black"> indian cafe and its history</font></h1>
 </body>
